--- a/requirements.txt
+++ b/requirements.txt
@@ -19,11 +19,11 @@ Jinja2==2.11.2
 jose==1.0.0
 Mako==1.1.3
 MarkupSafe==1.1.1
-pkg-resources==0.0.0
 psycopg2-binary==2.8.6
 pycparser==2.20
 pycryptodome==3.3.1
 python-dateutil==2.8.1
+python-dotenv==0.14.0
 python-editor==1.0.4
 python-jose-cryptodome==1.3.2
 requests==2.24.0
